Fix insufficient color contrast

--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ All colors MUST be HSL.
     --secondary-foreground: 215 25% 27%;
 
     --muted: 210 17% 95%;
-    --muted-foreground: 215 13% 40%;
+    --muted-foreground: 215 16% 32%;
 
     --accent: 24 100% 38%;
     --accent-foreground: 0 0% 100%;
